--- a/mods/templates/mod_home.html
+++ b/mods/templates/mod_home.html
@@ -13,7 +13,7 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'create_mod' %}" class="button">Upload a New Mod</a>
                 {% else %}
-                    <a href="/login/" class="button">Login to Upload</a>
+                    <a href="/u/login/" class="button">Login to Upload</a>
                 {% endif %}
             </div>
 
