--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -643,6 +643,7 @@ ul {
   margin: 0.5rem 0 1rem 0;
   border-radius: 4px;
   color: var(--text-color);
+  background-color: var(--bg-color);
 }
 
 .mod-details button {
