--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -27,6 +27,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <!-- End Google Fonts -->
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8764676296426896"crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
