--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -29,6 +29,13 @@
         <!-- End Google Fonts -->
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8764676296426896"crossorigin="anonymous"></script>
+
+        <style>
+            .ad {
+                width: calc(100% - 20px);
+                margin: 10px;
+            }
+        </style>
     </head>
     <body>
         <header>
