--- a/main/templates/coming_soon.html
+++ b/main/templates/coming_soon.html
@@ -8,26 +8,16 @@
         <br>
         <a style="text-align: center; display: block;" href="/u/login/" class="button">Login</a>
     </div>
-    <ins class="adsbygoogle"
-        style="display:block; text-align:center;"
-        data-ad-layout="in-article"
-        data-ad-format="fluid"
-        data-ad-client="ca-pub-8764676296426896"
-        data-ad-slot="6635106786"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8764676296426896"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-he+1j+4x-46-1s"
-     data-ad-client="ca-pub-8764676296426896"
-     data-ad-slot="7070995135"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    <div class="ad">
+        <ins class="adsbygoogle"
+            style="display:block; text-align:center;"
+            data-ad-layout="in-article"
+            data-ad-format="fluid"
+            data-ad-client="ca-pub-8764676296426896"
+            data-ad-slot="6635106786"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 {% endblock %}
 
