--- a/mods/templates/mod_detail.html
+++ b/mods/templates/mod_detail.html
@@ -48,6 +48,17 @@
                 <p>No comments yet.</p>
             {% endfor %}
         </div>
+        <div class="ad">
+            <ins class="adsbygoogle"
+                style="display:block; text-align:center;"
+                data-ad-layout="in-article"
+                data-ad-format="fluid"
+                data-ad-client="ca-pub-8764676296426896"
+                data-ad-slot="6635106786"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         <div class="aside right">
             <h3>All Versions</h3>
             <table>
