--- a/mods/templates/mod_home.html
+++ b/mods/templates/mod_home.html
@@ -31,6 +31,17 @@
                                 • Updated {{ mod.updated_at|date:"M d, Y" }}
                             </span>
                         </li>
+                        <div class="ad">
+                            <ins class="adsbygoogle"
+                                style="display:block; text-align:center;"
+                                data-ad-layout="in-article"
+                                data-ad-format="fluid"
+                                data-ad-client="ca-pub-8764676296426896"
+                                data-ad-slot="6635106786"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
+                        </div>
                     {% endfor %}
                 </ul>
             {% else %}
