--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -33,7 +33,9 @@
         <style>
             .ad {
                 width: calc(100% - 20px);
-                margin: 10px;
+                max-width: 500px;
+                margin: 0 auto;
+                display: block;
             }
         </style>
     </head>
