--- a/mods/templates/mod_detail.html
+++ b/mods/templates/mod_detail.html
@@ -77,7 +77,7 @@
                         {% if version.private %}
                         <span class="badge">Private</span>
                         {% else %}
-                        <a class="button" href="{{ version.download_link }}">Download</a>
+                        <a class="button" href="{{ version.zip_file.url }}">Download</a>
                         {% endif %}
                     </td>
                     {% if request.user == mod.creator %}
