--- a/mods/templates/mod_detail.html
+++ b/mods/templates/mod_detail.html
@@ -21,7 +21,7 @@
             {% if latest_version %}
                 <p>Version: {{ latest_version.version_number }}</p>
                 <p>Changelog: {{ latest_version.changelog|linebreaks }}</p>
-                <a class="button" href="{{ latest_version.download_link }}">Download</a>
+                <a class="button" href="{{ latest_version.zip_file.url }}">Download</a>
             {% else %}
                 <p>No versions available.</p>
             {% endif %}
