updated to not stupid ads

--- a/mods/templates/mod_detail.html
+++ b/mods/templates/mod_detail.html
@@ -29,11 +29,11 @@
     </div>
         <div class="ad">
             <ins class="adsbygoogle"
-                style="display:block; text-align:center;"
-                data-ad-layout="in-article"
+                style="display:block"
                 data-ad-format="fluid"
+                data-ad-layout-key="-he+1j+4x-46-1s"
                 data-ad-client="ca-pub-8764676296426896"
-                data-ad-slot="6635106786"></ins>
+                data-ad-slot="7070995135"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
