--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -67,6 +67,28 @@
                 <div id="popout-media" class="popout-media"></div>
             </div>
         </main>
+        <div class="ad">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-he+1j+4x-46-1s"
+                data-ad-client="ca-pub-8764676296426896"
+                data-ad-slot="7070995135"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <div class="ad">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-he+1j+4x-46-1s"
+                data-ad-client="ca-pub-8764676296426896"
+                data-ad-slot="7070995135"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         <script>
             async function getFollowing() {
                 try {
