--- a/mods/templates/edit_mod.html
+++ b/mods/templates/edit_mod.html
@@ -8,7 +8,7 @@
     {{ form.as_p }}
     <button type="submit" class="button">Save Changes</button>
   </form>
-  <form method="post" action="{% url 'mod_delete' mod.id %}" style="margin-top: 20px;">
+  <form method="post" action="{% url 'delete_mod' mod.id %}" style="margin-top: 20px;">
     {% csrf_token %}
     <button type="submit" class="button button-danger" onclick="return confirm('Are you sure you want to delete this mod?');">Delete Mod</button>
   </form>
