--- a/mods/templates/edit_version.html
+++ b/mods/templates/edit_version.html
@@ -8,7 +8,7 @@
     {{ form.as_p }}
     <button type="submit" class="button">Save Version</button>
   </form>
-  <form method="post" action="{% url 'mod_delete_version' version.id %}" style="margin-top: 20px;">
+  <form method="post" action="{% url 'delete_mod_version' version.id %}" style="margin-top: 20px;">
     {% csrf_token %}
     <button type="submit" class="button button-danger" onclick="return confirm('Are you sure you want to delete this version?');">Delete Version</button>
   </form>
