--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -66,29 +66,27 @@
                 <button class="close-btn" aria-label="Close">&times;</button>
                 <div id="popout-media" class="popout-media"></div>
             </div>
+            <div class="ad">
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-format="autorelaxed"
+                    data-ad-client="ca-pub-8764676296426896"
+                    data-ad-slot="2329788431"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+            <div class="ad">
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-format="autorelaxed"
+                    data-ad-client="ca-pub-8764676296426896"
+                    data-ad-slot="2329788431"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </main>
-        <div class="ad">
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-he+1j+4x-46-1s"
-                data-ad-client="ca-pub-8764676296426896"
-                data-ad-slot="7070995135"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-        <div class="ad">
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-format="fluid"
-                data-ad-layout-key="-he+1j+4x-46-1s"
-                data-ad-client="ca-pub-8764676296426896"
-                data-ad-slot="7070995135"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
         <script>
             async function getFollowing() {
                 try {
