added mylogin support

--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -55,7 +55,11 @@
     </form>
 
     <p style="text-align:center; margin-top:1.5em;">
-      Don’t have an account?
+      Login with 
+      <a href="/oidc/authenticate/" style="color: var(--brand-color);">MyLogin</a>
+    </p>
+    <p style="text-align:center; margin-top:0;">
+      Don't have an account?
       <a href="{% url 'register' %}" style="color: var(--brand-color);">Sign up</a>
     </p>
   </div>
