--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -56,7 +56,7 @@
 
     <p style="text-align:center; margin-top:1.5em;">
       Login with 
-      <a href="/oidc/authenticate/" style="color: var(--brand-color);">MyLogin</a>
+      <a href="/oidc/authenticate/" style="color: var(--brand-color);">Next Stop Login</a>
     </p>
     <p style="text-align:center; margin-top:0;">
       Don't have an account?
